# AGProject

./: README.md  crossover.py  invidual.py  main.py  mutation.py  plot.py  pyproject.toml
circle/: data_out.txt
flower/: data_out.txt
nike/: data_out.txt
porshe/: data_out.txt
